@@ -4152,9 +4152,9 @@ A function with that name existed in GP-1.39.15. Please update your script.
 
 New syntax: zideallog(nf,x,bid) ===> ideallog(nf,x,bid)
 
-ideallog(nf,x,bid): if bid is a big ideal, as given by idealstar(nf,I,1) or 
-idealstar(nf,I,2), gives the vector of exponents on the generators bid[2][3] 
-(even if these generators have not been computed).
+ideallog({nf},x,bid): if bid is a big ideal, as given by idealstar(nf,D,...), 
+gives the vector of exponents on the generators bid.gen (even if these 
+generators have not been explicitly computed).
 
 
   ***   at top-level: zidealstar()
@@ -4164,14 +4164,15 @@ A function with that name existed in GP-1.39.15. Please update your script.
 
 New syntax: zidealstar(nf,I) ===> idealstar(nf,I)
 
-idealstar(nf,I,{flag=1}): gives the structure of (Z_K/I)^*. flag is optional, 
-and can be 0: simply gives the structure as a 3-component vector v such that 
-v[1] is the order (i.e. eulerphi(I)), v[2] is a vector of cyclic components, 
-and v[3] is a vector giving the corresponding generators. If flag=1 (default), 
-gives idealstarinit, i.e. a 6-component vector [I,v,fa,f2,U,V] where v is as 
-above without the generators, fa is the prime ideal factorisation of I and f2, 
-U and V are technical but essential to work in (Z_K/I)^*. Finally if flag=2, 
-same as with flag=1 except that the generators are also given.
+idealstar({nf},N,{flag=1}): gives the structure of (Z_K/N)^*, where N is a 
+modulus (an ideal in any form or a vector [f0, foo], where f0 is an ideal and 
+foo is a {0,1}-vector with r1 components. flag is optional, and can be 0: 
+simply gives the structure as an abelian group, i.e. a 3-component vector 
+[h,d,g] where h is the order, d the orders of the cyclic factors and g the 
+generators; if flag=1 (default), gives a bid structure without generators, used 
+in ideallog to compute discrete logarithms; if flag=2, same as with flag=1 
+except that the generators are also given. If nf is omitted, N must be an 
+integer and we return the structure of (Z/NZ)^*.
 
 
   ***   at top-level: zidealstarinit()
@@ -4181,14 +4182,15 @@ A function with that name existed in GP-1.39.15. Please update your script.
 
 New syntax: zidealstarinit(nf,id) ===> idealstar(nf,id,1)
 
-idealstar(nf,I,{flag=1}): gives the structure of (Z_K/I)^*. flag is optional, 
-and can be 0: simply gives the structure as a 3-component vector v such that 
-v[1] is the order (i.e. eulerphi(I)), v[2] is a vector of cyclic components, 
-and v[3] is a vector giving the corresponding generators. If flag=1 (default), 
-gives idealstarinit, i.e. a 6-component vector [I,v,fa,f2,U,V] where v is as 
-above without the generators, fa is the prime ideal factorisation of I and f2, 
-U and V are technical but essential to work in (Z_K/I)^*. Finally if flag=2, 
-same as with flag=1 except that the generators are also given.
+idealstar({nf},N,{flag=1}): gives the structure of (Z_K/N)^*, where N is a 
+modulus (an ideal in any form or a vector [f0, foo], where f0 is an ideal and 
+foo is a {0,1}-vector with r1 components. flag is optional, and can be 0: 
+simply gives the structure as an abelian group, i.e. a 3-component vector 
+[h,d,g] where h is the order, d the orders of the cyclic factors and g the 
+generators; if flag=1 (default), gives a bid structure without generators, used 
+in ideallog to compute discrete logarithms; if flag=2, same as with flag=1 
+except that the generators are also given. If nf is omitted, N must be an 
+integer and we return the structure of (Z/NZ)^*.
 
 
   ***   at top-level: zidealstarinitgen()
@@ -4198,14 +4200,15 @@ A function with that name existed in GP-1.39.15. Please update your script.
 
 New syntax: zidealstarinitgen(nf,id) ===> idealstar(nf,id,2)
 
-idealstar(nf,I,{flag=1}): gives the structure of (Z_K/I)^*. flag is optional, 
-and can be 0: simply gives the structure as a 3-component vector v such that 
-v[1] is the order (i.e. eulerphi(I)), v[2] is a vector of cyclic components, 
-and v[3] is a vector giving the corresponding generators. If flag=1 (default), 
-gives idealstarinit, i.e. a 6-component vector [I,v,fa,f2,U,V] where v is as 
-above without the generators, fa is the prime ideal factorisation of I and f2, 
-U and V are technical but essential to work in (Z_K/I)^*. Finally if flag=2, 
-same as with flag=1 except that the generators are also given.
+idealstar({nf},N,{flag=1}): gives the structure of (Z_K/N)^*, where N is a 
+modulus (an ideal in any form or a vector [f0, foo], where f0 is an ideal and 
+foo is a {0,1}-vector with r1 components. flag is optional, and can be 0: 
+simply gives the structure as an abelian group, i.e. a 3-component vector 
+[h,d,g] where h is the order, d the orders of the cyclic factors and g the 
+generators; if flag=1 (default), gives a bid structure without generators, used 
+in ideallog to compute discrete logarithms; if flag=2, same as with flag=1 
+except that the generators are also given. If nf is omitted, N must be an 
+integer and we return the structure of (Z/NZ)^*.
 
 
   ***   at top-level: box()
@@ -4566,4 +4569,4 @@ New syntax: texprint(x) ===> printtex(x)
 printtex({str}*): outputs its string arguments in TeX format.
 
 
-Total time spent: 16
+Total time spent: 21
