@@ -16,8 +16,8 @@
 ecsmall([5, 6, 7, 8, 1, 2, 3, 4])], Vecsmall([2, 2, 2])], [[Vecsmall([2, 1, 
 4, 3, 6, 5, 8, 7]), Vecsmall([3, 4, 1, 2, 7, 8, 5, 6])], Vecsmall([2, 2])], 
 [[Vecsmall([2, 1, 4, 3, 6, 5, 8, 7]), Vecsmall([3, 4, 1, 2, 7, 8, 5, 6])], V
-ecsmall([2, 2])], [[Vecsmall([2, 1, 4, 3, 6, 5, 8, 7])], Vecsmall([2])], [[V
-ecsmall([2, 1, 4, 3, 6, 5, 8, 7])], Vecsmall([2])]]
+ecsmall([2, 2])], [[Vecsmall([3, 4, 1, 2, 7, 8, 5, 6])], Vecsmall([2])], [[V
+ecsmall([3, 4, 1, 2, 7, 8, 5, 6])], Vecsmall([2])]]
 [[[Vecsmall([7, 1, 5, 3, 6, 4, 8, 2]), Vecsmall([3, 5, 8, 2, 7, 1, 4, 6])], 
 Vecsmall([4, 2])], [[Vecsmall([7, 1, 5, 3, 6, 4, 8, 2])], Vecsmall([4])]]
-Total time spent: 972
+Total time spent: 947
