@@ -1,3 +1,3 @@
 x - 1
-[x^2 - 2, x^2 - 131, x^2 + 262, x^2 + 1, x^2 - 262, x^2 + 2, x^2 + x + 33]
-Total time spent: 16
+[x^2 - 2, x^2 - 262, x^2 + 262, x^2 + 2, x^2 - 131, x^2 + 1, x^2 + x + 33]
+Total time spent: 1
